...
            android:layout_height="wrap_content"
            android:text="@string/BMITitle"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

...
            android:layout_height="wrap_content"
            android:text="@string/ClassificationTitle"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

...
